src/snapshots/jjpwrgem__cli__tests__object_missing_colon_with_comma.snap
---
source: src/cli.rs
expression: annotated
---
error: expected colon after key, found `,`
 --> stdin:1:6
  |
1 | {"hi", 
  |  ----^
  |  |
  |  expected due to `"hi"`
  |
help: insert colon and placeholder key
  |
1 | {"hi": "ğŸŸğŸ›¹", 
  |      ++++++++
